
syntax = "proto3";


package TODO;

service MutationManager {
  //hotel create order
  rpc HotelCreateOrder (HotelCreateOrderRequest) returns (HotelCreateOrderReply) {}

  //hotel modify order
  rpc HotelModifyOrder (HotelModifyOrderRequest) returns (HotelModifyOrderReply) {}

  //hotel close order
  rpc HotelCloseOrder (HotelCloseOrderRequest) returns (HotelCloseOrderReply) {}

  //post order by adviser
  rpc AdviserPostOrder (AdviserPostOrderRequest) returns (AdviserPostOrderReply) {}

  //register order by pt
  rpc PTRegisterOrder (PTRegisterOrderRequest) returns (PTRegisterOrderReply) {}

}

message HotelCreateOrderRequest {
  string name = 1;
  string job = 2;
  uint64 date = 3;
  uint64 start_time = 4;
  uint64 duration = 5;
  uint64 count = 6;
  uint64 count_male = 7;
  uint64 count_female = 8;
  uint64 adviser = 9;
}


message HotelCreateOrderReply {
  uint64 order_id = 1;
  string create_result =2;
}


message HotelModifyOrderRequest {
  string order_id = 1;
  string job = 2;
  timestamp start_time_changed = 3;
  uint64 duration_changed = 4;
  string gender_mode_change = 5;
  uint64 count_changed = 6;
  uint64 count_male_changed = 7;
  uint64 count_female_changed = 8;
}


message HotelModifyOrderReply {
  string hotel_modify_result =1;
}


message HotelCloseOrderRequest {
  string order_id = 1;
}


message HotelCloseOrderReply {
  string hotel_close_result =1;
}

message AdviserPostOrderRequest {
  string order_id = 1;
  bool is_float = 2;
  uint64 hourly_salary = 3;
  string work_content = 4;
  TODO string attention = 5;
}


message AdviserPostOrderReply {
  string adviser_post_result =1;
}


message PTRegisterOrderRequest {
  string order_id = 1;
}


message PTRegisterOrderReply {
  string pt_register_result =1;
}
